--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"crypto-js": "^4.2.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.534.0",
+		"nodemailer": "^6.9.0",
 		"qrcode": "^1.5.4",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
